fix the overflow scroll

--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -7,6 +7,7 @@
   background: white;
   box-shadow: 2px 2px 50px rgb(204, 204, 204);
   overflow: scroll;
+  overflow-x: unset;
   transform: translateX(-100%);
   transition: all 0.5s ease;
   opacity: 0;
